Start of 3.1.x branch. Re-factoring to make compatible with JPMS (Java Modularisation).
 * Source / targert Java level is 11.
 * All Maven modules now have module-info.java files describing dependencies.
 * All test code moved to sister modules. For example, `maverick-base` now has `maverick-base-test`. This is because even now, Eclipse does not have support for mixing source and test folders in the same project module when used with JPMS. See https://bugs.eclipse.org/bugs/show_bug.cgi?id=559601
 * jzlib dependency removed and replaced with standard Java zlib implementation in maverick-zip.
 * `PuTTYPrivateKeyFile` moved into its own module (`maverick-putty`) to allow the BC depdencies to be removed from the base.

The modularisation is not yet *perfect*.

 * `jnr-fuse` which appears to now be unmaintained, and unlikely to get updates for JPMS.
 * Commons VFS is another one that is not yet modular. I see no plans either yet, other than the bare minimum work for `Automatic-Module-Name` added to MANIFEST.MF. https://github.com/apache/commons-vfs/pull/237
 * Commons CLI. IMO this should be replaced with Picocli anyway.
 * Pty4J. Again, no meta-data yet. This is maintained by JetBrains so you'd hope it does eventually get done.