@@ -615,7 +615,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 									new Date())
 							.addAttribute(
 									EventCodes.ATTRIBUTE_BYTES_EXPECTED,
-									new Long(attr.getSize().longValue()))
+									Long.valueOf(attr.getSize().longValue()))
 							.addAttribute(
 									EventCodes.ATTRIBUTE_FILE_FACTORY,
 									nfs.getFileFactory())
@@ -648,7 +648,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 										new Date())
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_EXPECTED,
-										new Long(attr.getSize().longValue()))
+										Long.valueOf(attr.getSize().longValue()))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_FILE_FACTORY,
 										nfs.getFileFactory())
@@ -689,10 +689,10 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 											session.getConnection())
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-											new Long(count))
+											Long.valueOf(count))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_READ,
-											new Long(read))
+											Long.valueOf(read))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_FILE_NAME,
 											path)
@@ -742,7 +742,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 										new Date())
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-										new Long(count))
+										Long.valueOf(count))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_FILE_FACTORY,
 										nfs.getFileFactory())
@@ -798,7 +798,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 								new Date())
 						.addAttribute(
 								EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-								new Long(count))
+								Long.valueOf(count))
 						.addAttribute(
 								EventCodes.ATTRIBUTE_FILE_FACTORY,
 								nfs.getFileFactory())
@@ -1006,7 +1006,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 										new Date())
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_EXPECTED,
-										new Long(length))
+										Long.valueOf(length))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_FILE_FACTORY,
 										nfs.getFileFactory())
@@ -1049,7 +1049,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 											new Date())
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_EXPECTED,
-											new Long(length))
+											Long.valueOf(length))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_FILE_FACTORY,
 											nfs.getFileFactory())
@@ -1066,7 +1066,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 					
 					if(filePolicy != null && filePolicy.hasUploadQuota()) {
 						if(!con.containsProperty("uploadQuota")) {
-							con.setProperty("uploadQuota", new Long(0L));
+							con.setProperty("uploadQuota", Long.valueOf(0L));
 						}
 						Long quota = (Long) con.getProperty("uploadQuota");
 						if(quota + length > filePolicy.getConnectionUploadQuota()) {
@@ -1074,7 +1074,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 							throw new IOException("User quota will be exceeded");
 						}
 						
-						con.setProperty("uploadQuota", new Long(quota + length));
+						con.setProperty("uploadQuota", Long.valueOf(quota + length));
 					}
 					
 					UnsignedInteger64 offset = new UnsignedInteger64(0);
@@ -1107,10 +1107,10 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 											con)
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-											new Long(count))
+											Long.valueOf(count))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_WRITTEN,
-											new Long(read))
+											Long.valueOf(read))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_FILE_NAME,
 											targetPath)
@@ -1145,7 +1145,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 											new Date())
 									.addAttribute(
 											EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-											new Long(count))
+											Long.valueOf(count))
 									.addAttribute(
 											EventCodes.ATTRIBUTE_FILE_FACTORY,
 											nfs.getFileFactory())
@@ -1228,7 +1228,7 @@ public class ScpCommand extends ExecutableCommand implements Runnable {
 								new Date())
 						.addAttribute(
 								EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-								new Long(count))
+								Long.valueOf(count))
 						.addAttribute(
 								EventCodes.ATTRIBUTE_FILE_FACTORY,
 								nfs.getFileFactory())
