@@ -1273,10 +1273,10 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-												new Long(evt.bytesRead))
+												Long.valueOf(evt.bytesRead))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_READ,
-												new Long(count))
+												Long.valueOf(count))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_FILE_NAME,
 												evt.path)
@@ -1343,7 +1343,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 								con)
 						.addAttribute(
 								EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-								new Long(evt.bytesRead))
+								Long.valueOf(evt.bytesRead))
 						.addAttribute(
 								EventCodes.ATTRIBUTE_FILE_NAME,
 								evt.path)
@@ -1394,7 +1394,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 
 				if(filePolicy.hasUploadQuota()) {
 					if(!con.containsProperty("uploadQuota")) {
-						con.setProperty("uploadQuota", new Long(0L));
+						con.setProperty("uploadQuota", Long.valueOf(0L));
 					}
 					Long quota = (Long) con.getProperty("uploadQuota");
 					if(quota + count > filePolicy.getConnectionUploadQuota()) {
@@ -1402,7 +1402,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 						return;
 					}
 					
-					con.setProperty("uploadQuota", new Long(quota + count));
+					con.setProperty("uploadQuota", Long.valueOf(quota + count));
 				}
 				try {	
 					
@@ -1422,10 +1422,10 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 										con)
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-										new Long(evt.bytesWritten))
+										Long.valueOf(evt.bytesWritten))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_WRITTEN,
-										new Long(count))
+										Long.valueOf(count))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_FILE_NAME,
 										evt.path)
@@ -1481,7 +1481,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 								con)
 						.addAttribute(
 								EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-								new Long(evt.bytesWritten))
+								Long.valueOf(evt.bytesWritten))
 						.addAttribute(
 								EventCodes.ATTRIBUTE_FILE_NAME,
 								evt.path)
@@ -1629,7 +1629,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-												new Long(evt.bytesWritten))
+												Long.valueOf(evt.bytesWritten))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_FILE_NAME,
 												evt.path)
@@ -1653,7 +1653,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-												new Long(evt.bytesWritten))
+												Long.valueOf(evt.bytesWritten))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_FILE_NAME,
 												evt.path)
@@ -1677,7 +1677,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-												new Long(evt.bytesRead))
+												Long.valueOf(evt.bytesRead))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_HANDLE,
 												evt.handle)
@@ -1708,10 +1708,10 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 													con)
 											.addAttribute(
 													EventCodes.ATTRIBUTE_BYTES_READ,
-													new Long(evt.bytesRead))
+													Long.valueOf(evt.bytesRead))
 											.addAttribute(
 													EventCodes.ATTRIBUTE_BYTES_WRITTEN,
-													new Long(evt.bytesWritten))
+													Long.valueOf(evt.bytesWritten))
 											.addAttribute(
 													EventCodes.ATTRIBUTE_HANDLE,
 													evt.handle)
@@ -1741,10 +1741,10 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 													con)
 											.addAttribute(
 													EventCodes.ATTRIBUTE_BYTES_READ,
-													new Long(evt.bytesRead))
+													Long.valueOf(evt.bytesRead))
 											.addAttribute(
 													EventCodes.ATTRIBUTE_BYTES_WRITTEN,
-													new Long(evt.bytesWritten))
+													Long.valueOf(evt.bytesWritten))
 											.addAttribute(
 													EventCodes.ATTRIBUTE_HANDLE,
 													evt.handle)
@@ -1778,7 +1778,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-												new Long(evt.bytesRead))
+												Long.valueOf(evt.bytesRead))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_FILE_NAME,
 												evt.path)
@@ -1803,10 +1803,10 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 												con)
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_READ,
-												new Long(evt.bytesRead))
+												Long.valueOf(evt.bytesRead))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_BYTES_WRITTEN,
-												new Long(evt.bytesWritten))
+												Long.valueOf(evt.bytesWritten))
 										.addAttribute(
 												EventCodes.ATTRIBUTE_FILE_NAME,
 												evt.path)
@@ -2081,7 +2081,7 @@ public class SftpSubsystem extends Subsystem implements SftpSpecification {
 										con)
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-										new Long(0))
+										Long.valueOf(0))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_HANDLE,
 										handle)
